<resources>
    <string name="app_name">霍普斯安卓学习</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="font_blue">蓝色</string>
    <string name="font_green">绿色</string>
    <string name="font_red">红色</string>

    <string name="hello">控件组合</string>
    <string name="text">我是显示文本控件和按钮控件</string>
    <string name="anniu">按钮</string>
    <string name="frameLayout">1.文本和按钮</string>
    <string name="imagebutton">2.图片按钮</string>
    <string name="ckb">3.复选框</string>
    <string name="radbutton">4.单选框</string>
    <string name="alc">5.钟表</string>
    <string name="dc">6.电子表</string>
    <string name="dp">7.日期选择控件</string>
    <string name="Iv">8.图片显示</string>
    <string name="tp">9.时间选择控件</string>
    <string name="to">10.双状态按钮控件</string>
    <string name="ed">11.文本编辑</string>
    <string name="pb">12.进度条控件</string>
    <string name="sb">13.可拖动的进度条控件</string>
    <string name="act">14.支持自动完成功能的可编辑文本控件</string>
    <string name="mact">15.支持自动完成功能的可编辑文本控件,允许输入多值</string>
    <string name="zc">16.放大/缩小控件</string>
    <string name="idd">17.整合控件</string>
    <string name="vv">18.视频播放</string>
    <string name="wv">19.浏览器控件</string>
    <string name="rb">20.评分控件</string>
    <string name="tb">21.选项卡控件</string>
    <string name="sp">22.下拉框控件</string>
    <string name="chr">23.计时控件</string>
    <string name="scr">24.滚动条控件</string>
    <string name="tsh">25.文字装换控件</string>
    <string name="gl">26.缩略图浏览器控件</string>
    <string name="ima">27.图片转换器控件</string>
    <string name="gv">28.网格控件</string>
    <string name="edb">29.支持展开/收缩功能的列表控件</string>
    <string name="sharepreference">SharepreFerence</string>

    <string name="tab_menu_alert">学习</string>
    <string name="tab_menu_profile">作业</string>
    <string name="tab_menu_pay">资源</string>
    <string name="tab_menu_setting">关于</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_about">About</string>
    <string name="title_activity_line_chart">LineChartActivity</string>
    <string name="title_activity_column_chart">ColumnChartActivity</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <string name="title_activity_bubble_chart">BubbleChartActivity</string>
    <string name="title_activity_preview_line_chart">PreviewLineChartActivity</string>
    <string name="title_activity_preview_column_chart">PreviewColumnChartActivity</string>
    <string name="title_activity_combo_line_column_chart">ComboLineColumnChartActivity</string>
    <string name="title_activity_line_column_dependency">LineColumnDependency</string>
    <string name="title_activity_good_bad">GoodBadActivity</string>
    <string name="title_activity_tempo_chart">TempoChartActivity</string>
    <string name="title_activity_speed_chart">SpeedChartActivity</string>
    <string name="title_activity_view_pager_charts">ViewPagerChartsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_version_label">"Library version "</string>
    <string name="about_author">Leszek Wach 2014</string>
    <string name="about_app_icon_content_description">App icon</string>
    <string name="about_go_to_github">Go to GitHub</string>

    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_success">刷新成功</string>
    <string name="xlistview_header_hint_failt">刷新失败</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

</resources>
