<?xml version="1.0" encoding="utf-8"?> 
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    
    	<Button
    		android:id="@+id/frameLayout"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/frameLayout"
    	/>
    	<Button
    		android:id="@+id/imagebutton"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/imagebutton"
    	/>
		<Button 
		    android:id="@+id/check"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/ckb"
		    />
		<Button
		    android:id="@+id/rad"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/radbutton"
		    />

		<Button
		    android:id="@+id/ana"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/alc"
		    />
		<Button
		    android:id="@+id/dig"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/dc"
		    />
		<Button
		    android:id="@+id/Im"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/Iv"
		    />
		<Button
		    android:id="@+id/date"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/dp"
		    />
		
		    <Button
		    android:id="@+id/time"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/tp"
		    />
		     <Button
		    android:id="@+id/togg"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/to"
		    />
		    <Button
		    android:id="@+id/edit"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/ed"
		    />
		    <Button
		    android:id="@+id/prog"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/pb"
		    />
		     <Button
		    android:id="@+id/seek"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/sb"
		    />
    	  <Button
		    android:id="@+id/auto"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/act"
		    />
    	  <Button
		    android:id="@+id/mult"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/mact"
		    />
    	  <Button
		    android:id="@+id/zoom"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/zc"
		    />
    	  <Button
		    android:id="@+id/ind"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/idd"
		    />
    	    <Button
		    android:id="@+id/video"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/vv"
		    />
    	  <Button
		    android:id="@+id/web"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/wv"
		    />
    	   <Button
		    android:id="@+id/rat"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/rb"
		    />
    	     <Button
		    android:id="@+id/tab"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/tb"
		    />
    	    <Button
		    android:id="@+id/spinner"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/sp"
		    />
    	    <Button
		    android:id="@+id/chronometer"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/chr"
		    />
    	    <Button
		    android:id="@+id/sv"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/scr"
		    />
    	    <Button
		    android:id="@+id/ts"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/tsh"
		    />
    	     <Button
		    android:id="@+id/ga"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/gl"
		    />
    	    <Button
		    android:id="@+id/is"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/ima"
		    />
    	    <Button
		    android:id="@+id/gd"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/gv"
		    />
    	    <Button
		    android:id="@+id/edb"
		    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/edb"
		    />
</LinearLayout>
</ScrollView>